<?xml version="1.0" encoding="utf-8"?>
<!--****************************************************************************
*
*  Copyright 2011 Drakenclimber, LLC.
*
*  Licensed under the Apache License, Version 2.0 (the "License");
*  you may not use this file except in compliance with the License.
*  You may obtain a copy of the License at
*
*  http://www.apache.org/licenses/LICENSE-2.0
*
*  Unless required by applicable law or agreed to in writing, software
*  distributed under the License is distributed on an "AS IS" BASIS,
*  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
*  See the License for the specific language governing permissions and
*  limitations under the License.
*
********************************************************************************
* Revision information.  DO NOT MODIFY.  This is auto-generated by the SCM.
*
* $Date: 2011-11-14 21:38:18 -0600 (Mon, 14 Nov 2011) $
* $Revision: 14 $
*
*****************************************************************************-->

<resources>
    <string name="accelerometer_service">Accelerometer Service Running</string><string name="app_name">Accelerometer Service</string>
    <string name="service_stopped">Service Stopped</string>
    <string name="start_string">Start Service</string>
    <string name="stop_string">Stop Service</string>
    <string name="x_string">X:  0.00 m/s^2</string>
    <string name="y_string">Y:  0.00 m/s^2</string>
    <string name="z_string">Z:  0.00 m/s^2</string>
</resources>
