<?xml version="1.0" encoding="utf-8"?>
<!--****************************************************************************
*
*  Copyright 2011 Drakenclimber, LLC.
*
*  Licensed under the Apache License, Version 2.0 (the "License");
*  you may not use this file except in compliance with the License.
*  You may obtain a copy of the License at
*
*  http://www.apache.org/licenses/LICENSE-2.0
*
*  Unless required by applicable law or agreed to in writing, software
*  distributed under the License is distributed on an "AS IS" BASIS,
*  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
*  See the License for the specific language governing permissions and
*  limitations under the License.
*
********************************************************************************
* Revision information.  DO NOT MODIFY.  This is auto-generated by the SCM.
*
* $Date: 2011-11-14 21:38:18 -0600 (Mon, 14 Nov 2011) $
* $Revision: 14 $
*
*****************************************************************************-->

<RelativeLayout
android:id="@+id/WidgetRelativeLayout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:background="@color/accel_white"
xmlns:android="http://schemas.android.com/apk/res/android">

   <!-- Accelerometer Data -->
   <LinearLayout
   android:id="@+id/WidgetDataLayout"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical"
   android:layout_alignParentTop="true">
   
      <TextView
      android:id="@+id/WidgetXAccel"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:typeface="monospace"
      android:text="@string/x_string"
      android:textSize="24sp"
      android:textColor="@color/accel_blue"
      android:gravity="center_horizontal"
      android:layout_alignParentTop="true"
      android:layout_marginTop="20sp">
      </TextView>
      
      <TextView
      android:id="@+id/WidgetYAccel"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:typeface="monospace"
      android:text="@string/y_string"
      android:textSize="24sp"
      android:textColor="@color/accel_blue"
      android:gravity="center_horizontal"
      android:layout_alignParentTop="true"
      android:layout_marginTop="20sp">
      </TextView>
      
      <TextView
      android:id="@+id/WidgetZAccel"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:typeface="monospace"
      android:text="@string/z_string"
      android:textSize="24sp"
      android:textColor="@color/accel_blue"
      android:gravity="center_horizontal"
      android:layout_alignParentTop="true"
      android:layout_marginTop="20sp">
      </TextView>
   </LinearLayout>

   <!-- Bottom Row -->
   <LinearLayout
   android:id="@+id/WidgetBottomLayout"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:layout_alignParentBottom="true">
      <Button
      android:id="@+id/WidgetStartButton"
      android:layout_alignParentTop="true"
      android:layout_alignParentLeft="true"
      android:text="@string/start_string"
      android:layout_weight="1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
      </Button>
      
      <Button
      android:id="@+id/WidgetStopButton"
      android:layout_alignParentTop="true"
      android:layout_alignParentRight="true"
      android:text="@string/stop_string"
      android:layout_weight="1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">
      </Button>
   </LinearLayout>

</RelativeLayout>